--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "^2.1.1",
+    "@mantine/hooks": "^2.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-jss": "^10.7.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
