--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@mantine/core": "^2.1.1",
@@ -16,7 +17,11 @@
     "react-jss": "^10.7.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.14",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
     "typescript": "4.3.5"
   }
 }
