--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-jss": "^10.7.1"
+    "react-jss": "^10.7.1",
+    "sass": "^1.36.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@types/react": "17.0.14",
+    "@testing-library/user-event": "^13.2.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.15",
     "babel-jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
-    "typescript": "4.3.5"
+    "typescript": "^4.3.5"
   }
 }
