--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "generate": "plop"
   },
   "dependencies": {
     "@mantine/core": "^2.1.1",
@@ -30,6 +31,7 @@
     "babel-jest": "^27.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "plop": "^2.7.4",
     "typescript": "^4.3.5"
   }
 }
