--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "babel-jest": "^27.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
