--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "mantine-next-template",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
+  "author": "Timothy Merritt",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "generate": "plop"
+    "test-quiet": "jest --silent",
+    "generate": "plop",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mantine/core": "^2.1.1",
@@ -30,9 +32,18 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "babel-jest": "^27.0.6",
+    "eslint": "^7.31.0",
+    "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "lint-staged": ">=10",
     "plop": "^2.7.4",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
