--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.31.0",
     "husky": "^7.0.1",
