--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "test": "jest --config jest.config.js",
     "test-quiet": "jest --silent --config jest.config.js",
-    "test-staged:dev": "jest --silent --config jest.config.js --changedSince=dev",
+    "test-staged": "jest --silent --config jest.config.js -o",
     "scrutiny": "yarn test-staged && yarn tsc --noEmit",
     "generate": "plop",
     "prepare": "husky install"
