--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@mantine/core": "^2.1.1",
-    "@mantine/hooks": "^2.1.1",
+    "@mantine/core": "^2.1.5",
+    "@mantine/hooks": "^2.1.5",
+    "@mantine/prism": "^2.1.5",
     "next": "11.0.1",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.7.1",
