--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "mantine-next-template",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
+  "author": "Timothy Merritt",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
-    "generate": "plop"
+    "test": "jest --config jest.config.js",
+    "test-quiet": "jest --silent --config jest.config.js",
+    "test-staged": "jest --silent --config jest.config.js -o",
+    "scrutiny": "yarn test-staged && yarn tsc --noEmit",
+    "generate": "plop",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@mantine/core": "^2.1.1",
-    "@mantine/hooks": "^2.1.1",
+    "@mantine/core": "^2.1.5",
+    "@mantine/hooks": "^2.1.5",
+    "@mantine/prism": "^2.1.5",
     "next": "11.0.1",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.7.1",
@@ -29,10 +35,23 @@
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
+    "eslint": "^7.31.0",
+    "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "lint-staged": ">=10",
     "plop": "^2.7.4",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "**/*.(js|ts|tsx)": [
+      "eslint --fix"
+    ],
+    "**/*.(js|json|ts|tsx)": [
+      "prettier --write ./.prettierrc"
+    ]
   }
 }
