--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
