docs: Update README & docs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "test": "jest --config jest.config.js",
     "test:watch": "yarn test --watch",
-    "generate": "plop",
+    "bake": "plop",
+    "bake-component": "plop Component _",
+    "bake-page": "plop Page _",
     "prepare": "husky install",
     "format": "prettier --write './{src,templates}/**/*'",
     "lint": "eslint '{src,templates}/**/*.{js,jsx,ts,tsx}'",
