--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-jss": "^10.7.1",
     "sass": "^1.36.0"
   },
