feat: Add theme defaults, structure, remove extra styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@public/*": ["public/*"],
       "@test/*": ["test/*"],
       "@styles/*": ["src/styles/*"],
+      "@theme/*": ["src/theme/*"],
       "@utils/*": ["src/utils/*"],
       "@/*": ["src/*"]
     }
