--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/inter": "^4.5.0",
+    "@fontsource/playfair-display": "^4.5.0",
     "framer-motion": "^4",
     "next": ">=11.1.0",
     "react": "17.0.2",
