--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,11 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/pages/post/[slug].js"
+  ],
   "exclude": ["node_modules"]
 }
