--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "author": "Timothy Merritt",
   "description": "A gourmet Next.js starter + boilerplate",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/timmybytes/banquet.git"
@@ -32,6 +31,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.5",
+    "@chakra-ui/system": "^1.0.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/inter": "^4.5.0",
@@ -45,7 +45,7 @@
     "sass": "^1.36.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
+    "@babel/core": "^7.0.0",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
