--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@timmybytes/banquet",
+  "name": "banquet",
   "version": "0.1.1",
   "license": "MIT",
   "author": "Timothy Merritt",
