test: Improve git hook testing

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --config jest.config.js",
-    "test:changed": "jest --config jest.config.js --onlyChanged",
+    "test:changed": "jest --config jest.config.js -o",
     "test:watch": "yarn test --watch",
     "bake": "plop",
     "bake-component": "plop Component _",
