--- a/package.json
+++ b/package.json
@@ -69,6 +69,10 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
+  "resolutions": {
+    "@types/react": "17.0.15",
+    "@types/react-dom": "18.0.0"
+  },
   "lint-staged": {
     "**/*.(js|ts|tsx)": [
       "eslint --fix"
